# open3d_vendor-release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: bloom.yml
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-lyrical-open3d-vendor.spec  template.spec
